<resources>
    <string name="app_name">Spring Application</string>

    <!--dialog-->
    <string name="back_pressed_title">Closing Application</string>
    <string name="back_pressed_message">Are you sure you want to close this application?</string>
    <string name="back_pressed_positive">Yes</string>
    <string name="back_pressed_negative">No</string>

    <!--login-->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="user_error">Username not recognized.</string>
    <string name="user_empty_error">Username required.</string>
    <string name="pass_error">Password not recognized.</string>
    <string name="pass_empty_error">Password required.</string>
    <string name="remember_me">Remember Me</string>
    <string name="internetError">No network connection detected. Try again later.</string>
    <string name="databaseError">No database connection detected. Contact an administrator.</string>
    <string name="userPassError">Username/Password Incorrect!</string>

    <!--home-->
    <string name="home">Home</string>
    <string name="data">Data</string>
    <string name="settings">Settings</string>

    <string name="power_text">Power Produced</string>
    <string name="humidity_text">Humidity</string>
    <string name="temperature_text">Temperature</string>
    <string name="barometric_text">Barometric Pressure</string>
    <string name="sunny">Sunny</string>
    <string name="overcast">Overcast</string>
    <string name="night">Night</string>


    <string name="power_data">%1$.2f kWh</string>
    <string name="humidity_data">%1$.0f%%</string>
    <string name="temperature_data">%1$.2f %2$s</string>
    <string name="barometric_date">%1$.2f kPa</string>
    <string name="light_date">%1$s</string>

    <!--data-->
    <string name="insufficient">Insufficient Data</string>
    <string name="voltage">Power (kWh)</string>
    <string name="humidity">Humidity (%)</string>
    <string name="temperature_c">Degrees (C)</string>
    <string name="temperature_f">Degrees (F)</string>
    <string name="barometric">Barometric (kPa)</string>
    <string name="light">Lux</string>

    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="from_the_last"> from the last</string>

    <string-array name="source_array">
        <item>Power</item>
        <item>Humidity</item>
        <item>Temperature</item>
        <item>Barometric</item>
        <item>Light</item>
    </string-array>

    <string-array name="time_array">
        <item>1 Day</item>
        <item>7 Days</item>
        <item>30 Days</item>
    </string-array>

    <!-- settings activity -->
    <string name="about_application">About Application</string>
    <string name="app_information">\nSPrINg Application v1.0\nBuilt on November. 14, 2016\n\nApplication Authors:\n\tSteven Spiteri\n\tRichard Burak\n\tSalvatore Angilletta</string>
    <string name="application_theme">Application Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="change_temperature_measurement">Change Temperature Measurement</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="logout">Logout</string>

    <!-- menu text -->
    <string name="action_settings">Settings</string>


</resources>
