<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@android:color/white"
        tools:context=".LoginActivity">

        <!--logo-->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo" />

        <LinearLayout
            android:id="@+id/status_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="visible">

            <!--status-->
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:textSize="@dimen/small"
                android:gravity="center" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:visibility="gone">

            <!--incorrect-->
            <TextView
                android:id="@+id/incorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:textSize="@dimen/small"
                android:gravity="center_horizontal" />

            <!--login-->
            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/large"
                android:text="@string/login"/>

            <!--divider-->
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black">
            </View>

            <!--username-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small"
                android:text="@string/username"/>
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large"
                android:background="@android:color/darker_gray"/>

            <!--password-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large"
                android:inputType="textPassword"
                android:background="@android:color/darker_gray" />

            <!--divider-->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin">
            </View>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black">
            </View>

            <!--remember me-->
            <CheckBox
                android:id="@+id/rememberMe_checkBox"
                android:text="@string/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--sign in-->
            <Button
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button"
                android:layout_gravity="right"
                android:text="@string/sign_in"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>